--- a/index.html
+++ b/index.html
@@ -10,8 +10,37 @@
     <canvas id="sparkles"></canvas>
     <div id="container">
         <header>
-            <div class="estrelas"></div>
+            <div class="stars"></div>
+            
+            <nav>
+                <ul>
+                    <li><a href="#about">Sobre mim</a></li>
+                    <li><a href="#technologies">Tecnologias</a></li>
+                    <li><a href="#projects">Projeto</a></li>
+                    <li><a href="#contacts">Contato</a></li>
+                </ul>
+            </nav>
+
+            <div id="name">
+                <h1>Patrícia Dias Rodrigues</h1>
+                <h2>Desenvolvedora Web</p>
+            </div>
         </header>
+
+        <section id="about">
+                <h3>Quem sou eu?</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse accumsan tristique est, luctus tincidunt lorem maximus quis. Integer a purus eu turpis semper venenatis. Nullam porta efficitur odio, sit amet imperdiet libero mollis faucibus. Aliquam tempus lacus erat, eget laoreet sem posuere non. Donec tincidunt, lectus ut laoreet sollicitudin, elit lectus consectetur sapien, vitae auctor enim augue nec nisi. Etiam porta vulputate nisl, vitae cursus felis mattis vel. Nulla consequat, lectus at accumsan rutrum, lectus nisl maximus eros, in pretium est lorem in nunc. Aliquam ultrices interdum euismod. Mauris tristique est nunc, in accumsan dui molestie gravida. Fusce est tortor, auctor non velit nec, scelerisque aliquam justo. Integer ac tortor tortor. Donec vitae ipsum sit amet velit ultrices facilisis.</p>
+        </section>
+
+        <section id="technologies">
+            <h3>Tecnologias</h3>
+        </section>
+
+        <section id="projects">
+            <h3>Projetos</h3>
+        </section>
+
+        <footer id="contacts"></footer>
     </div>
 </body>
 <script src="assets/js/cursor.js"></script>
