Tecnologias e Ferramentas montado

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <ul>
                     <li><a href="#about">Sobre mim</a></li>
                     <li><a href="#technologies">Tecnologias</a></li>
-                    <li><a href="#projects">Projeto</a></li>
+                    <li><a href="#projects">Projetos</a></li>
                     <li><a href="#contacts">Contato</a></li>
                 </ul>
             </nav>
@@ -59,7 +59,150 @@
         </section>
 
         <section id="technologies">
-            <h3>Tecnologias</h3>
+            <h3>Tecnologias e Ferramentas</h3>
+
+            <div class="items">
+                <div class="item">
+                    <div class="card">
+                        <div class="face front">
+                            <img src="./assets/images/html5-color.svg" alt="HTML5">
+                        </div>
+                        <div class="face back">
+                            <span class="tech-name">HTML5</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="card">
+                        <div class="face front">
+                            <img src="./assets/images/css3-color.svg" alt="CSS3">
+                        </div>
+                        <div class="face back">
+                            <span class="tech-name">CSS3</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="card">
+                        <div class="face front">
+                            <img src="./assets/images/javascript-color.svg" alt="JavaScript">
+                        </div>
+                        <div class="face back">
+                            <span class="tech-name">JavaScript</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="card">
+                        <div class="face front">
+                            <img src="./assets/images/typescript-color.svg" alt="TypeScript">
+                        </div>
+                        <div class="face back">
+                            <span class="tech-name">TypeScript</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="card">
+                        <div class="face front">
+                            <img src="./assets/images/angular-color.svg" alt="Angular">
+                        </div>
+                        <div class="face back">
+                            <span class="tech-name">Angular</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="card">
+                        <div class="face front">
+                            <img src="./assets/images/ionic-color.svg" alt="Ionic">
+                        </div>
+                        <div class="face back">
+                            <span class="tech-name">Ionic</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="card">
+                        <div class="face front">
+                            <img src="./assets/images/php-color.svg" alt="PHP">
+                        </div>
+                        <div class="face back">
+                            <span class="tech-name">PHP</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="card">
+                        <div class="face front">
+                            <img src="./assets/images/mysql-color.svg" alt="MySQL">
+                        </div>
+                        <div class="face back">
+                            <span class="tech-name">MySQL</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="card">
+                        <div class="face front">
+                            <img src="./assets/images/wordpress-color.svg" alt="Wordpress">
+                        </div>
+                        <div class="face back">
+                            <span class="tech-name">Wordpress</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="card">
+                        <div class="face front">
+                            <img src="./assets/images/firebase-color.svg" alt="Firebase">
+                        </div>
+                        <div class="face back">
+                            <span class="tech-name">Firebase</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="card">
+                        <div class="face front">
+                            <img src="./assets/images/git-color.svg" alt="Git">
+                        </div>
+                        <div class="face back">
+                            <span class="tech-name">Git</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="card">
+                        <div class="face front">
+                            <img src="./assets/images/figma-color.svg" alt="Figma">
+                        </div>
+                        <div class="face back">
+                            <span class="tech-name">Figma</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="card">
+                        <div class="face front">
+                            <img src="./assets/images/uml-color.svg" alt="UML">
+                        </div>
+                        <div class="face back">
+                            <span class="tech-name">UML</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="card">
+                        <div class="face front">
+                            <img src="./assets/images/bootstrap-color.svg" alt="BootStrap">
+                        </div>
+                        <div class="face back">
+                            <span class="tech-name">BootStrap</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
 
         <section id="projects">
