--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
 
         <section id="about">
                 <div class="col-1">
-                    
+                    <div class="square-container">
+                        <img id="profile" src="./assets/images/perfil.jpg" alt="Foto de Perfil">
+                    </div>
                 </div>
                 <div class="col-2">
                     <div class="info">
