--- a/projeto1.html
+++ b/projeto1.html
@@ -40,7 +40,7 @@
             <div class="col-2">
                 <div class="info">
                     <h3>Sobre o projeto...</h3>
-                    <p>Esse projeto foi desenvolvido em conjunto como Trabalho de Conclusão de Curso do Técnico de Desenvolvimento de Sistemas. Como cliente, foi escolhido a Prudente Casa Pet, uma empresa de Hospedagem e Day Care de animais de estimação.</p>
+                    <p>Esse projeto foi desenvolvido em grupo como Trabalho de Conclusão de Curso do Técnico de Desenvolvimento de Sistemas. Como cliente, foi escolhido a Prudente Casa Pet, uma empresa de Hospedagem e Day Care de animais de estimação.</p>
                     <p>O sistema é composto por um site administrativo a ser usado pela dona do estabelecimento, além de um aplicativo com o objetivo de facilitar a comunicação entre a empresa e seus clientes durante a estadia de um pet.</p>
                     <div class="icones">
                         <a href="https://www.instagram.com/prudente_casapet/?igshid=YmMyMTA2M2Y%3D" target="_blank" class="icone">
@@ -190,6 +190,7 @@
         </section>
     </main>
 </body>
-<script src="assets/js/cursor.js"></script>
-<script src="assets/js/videoGallery.js"></script>
+<script src="./assets/js/cursor.js"></script>
+<script src="./assets/js/menu.js"></script>
+<script src="./assets/js/videoGallery.js"></script>
 </html>
