Tamanho das fontes alteradas

--- a/projeto1.html
+++ b/projeto1.html
@@ -175,7 +175,7 @@
                         <div class="face back">
                             <div class="text">
                                 <h4>Aplicativo</h4>
-                                <p>O aplicativo também foi desenvolvido com Angular e Ionic. Seu objetivo é facilitar a comunicação entre a empresa e seus clientes, para isso, o administrador consegue fazer postagens refêntes aos pets hospedados, que podem ser visualizados por seus tutores.</p>
+                                <p>Também desenvolvido com Angular e Ionic, nele, o administrador consegue fazer postagens referentes aos pets hospedados, que podem ser visualizados por seus tutores.</p>
                             </div>
                         </div>
                     </div>
