--- a/pt/index.html
+++ b/pt/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Patrícia Dias</title>
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="../assets/css/style.css">
 </head>
 <body>
     <canvas id="sparkles"></canvas>
@@ -36,7 +36,7 @@
         <section id="about">
                 <div class="col-1">
                     <div class="square-container">
-                        <img id="profile" src="./assets/images/perfil.jpg" alt="Foto de Perfil">
+                        <img id="profile" src="../assets/images/perfil.jpg" alt="Foto de Perfil">
                     </div>
                 </div>
                 <div class="col-2">
@@ -56,7 +56,7 @@
                                     <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854zm4.943 12.248V6.169H2.542v7.225zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248S2.4 3.226 2.4 3.934c0 .694.521 1.248 1.327 1.248zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016l.016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225z"/>
                                 </svg>
                             </a>
-                            <a href="./assets/documents/Curriculo.pdf" target="_blank"  class="icone">
+                            <a href="../assets/documents/Curriculo.pdf" target="_blank"  class="icone">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-file-earmark-text-fill" viewBox="0 0 16 16">
                                     <path d="M9.293 0H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V4.707A1 1 0 0 0 13.707 4L10 .293A1 1 0 0 0 9.293 0M9.5 3.5v-2l3 3h-2a1 1 0 0 1-1-1M4.5 9a.5.5 0 0 1 0-1h7a.5.5 0 0 1 0 1zM4 10.5a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7a.5.5 0 0 1-.5-.5m.5 2.5a.5.5 0 0 1 0-1h4a.5.5 0 0 1 0 1z"/>
                                 </svg>
@@ -75,7 +75,7 @@
                 <div class="item">
                     <div class="card">
                         <div class="face front">
-                            <img src="./assets/images/html5-color.svg" alt="HTML5">
+                            <img src="../assets/images/html5-color.svg" alt="HTML5">
                         </div>
                         <div class="face back">
                             <span class="tech-name">HTML5</span>
@@ -85,7 +85,7 @@
                 <div class="item">
                     <div class="card">
                         <div class="face front">
-                            <img src="./assets/images/css3-color.svg" alt="CSS3">
+                            <img src="../assets/images/css3-color.svg" alt="CSS3">
                         </div>
                         <div class="face back">
                             <span class="tech-name">CSS3</span>
@@ -95,7 +95,7 @@
                 <div class="item">
                     <div class="card">
                         <div class="face front">
-                            <img src="./assets/images/javascript-color.svg" alt="JavaScript">
+                            <img src="../assets/images/javascript-color.svg" alt="JavaScript">
                         </div>
                         <div class="face back">
                             <span class="tech-name">JavaScript</span>
@@ -105,7 +105,7 @@
                 <div class="item">
                     <div class="card">
                         <div class="face front">
-                            <img src="./assets/images/typescript-color.svg" alt="TypeScript">
+                            <img src="../assets/images/typescript-color.svg" alt="TypeScript">
                         </div>
                         <div class="face back">
                             <span class="tech-name">TypeScript</span>
@@ -115,7 +115,7 @@
                 <div class="item">
                     <div class="card">
                         <div class="face front">
-                            <img src="./assets/images/angular-color.svg" alt="Angular">
+                            <img src="../assets/images/angular-color.svg" alt="Angular">
                         </div>
                         <div class="face back">
                             <span class="tech-name">Angular</span>
@@ -125,7 +125,7 @@
                 <div class="item">
                     <div class="card">
                         <div class="face front">
-                            <img src="./assets/images/ionic-color.svg" alt="Ionic">
+                            <img src="../assets/images/ionic-color.svg" alt="Ionic">
                         </div>
                         <div class="face back">
                             <span class="tech-name">Ionic</span>
@@ -135,7 +135,7 @@
                 <div class="item">
                     <div class="card">
                         <div class="face front">
-                            <img src="./assets/images/php-color.svg" alt="PHP">
+                            <img src="../assets/images/php-color.svg" alt="PHP">
                         </div>
                         <div class="face back">
                             <span class="tech-name">PHP</span>
@@ -145,7 +145,7 @@
                 <div class="item">
                     <div class="card">
                         <div class="face front">
-                            <img src="./assets/images/mysql-color.svg" alt="MySQL">
+                            <img src="../assets/images/mysql-color.svg" alt="MySQL">
                         </div>
                         <div class="face back">
                             <span class="tech-name">MySQL</span>
@@ -155,7 +155,7 @@
                 <div class="item">
                     <div class="card">
                         <div class="face front">
-                            <img src="./assets/images/wordpress-color.svg" alt="Wordpress">
+                            <img src="../assets/images/wordpress-color.svg" alt="Wordpress">
                         </div>
                         <div class="face back">
                             <span class="tech-name">Wordpress</span>
@@ -165,7 +165,7 @@
                 <div class="item">
                     <div class="card">
                         <div class="face front">
-                            <img src="./assets/images/firebase-color.svg" alt="Firebase">
+                            <img src="../assets/images/firebase-color.svg" alt="Firebase">
                         </div>
                         <div class="face back">
                             <span class="tech-name">Firebase</span>
@@ -175,7 +175,7 @@
                 <div class="item">
                     <div class="card">
                         <div class="face front">
-                            <img src="./assets/images/git-color.svg" alt="Git">
+                            <img src="../assets/images/git-color.svg" alt="Git">
                         </div>
                         <div class="face back">
                             <span class="tech-name">Git</span>
@@ -185,7 +185,7 @@
                 <div class="item">
                     <div class="card">
                         <div class="face front">
-                            <img src="./assets/images/figma-color.svg" alt="Figma">
+                            <img src="../assets/images/figma-color.svg" alt="Figma">
                         </div>
                         <div class="face back">
                             <span class="tech-name">Figma</span>
@@ -195,7 +195,7 @@
                 <div class="item">
                     <div class="card">
                         <div class="face front">
-                            <img src="./assets/images/uml-color.svg" alt="UML">
+                            <img src="../assets/images/uml-color.svg" alt="UML">
                         </div>
                         <div class="face back">
                             <span class="tech-name">UML</span>
@@ -205,7 +205,7 @@
                 <div class="item">
                     <div class="card">
                         <div class="face front">
-                            <img src="./assets/images/bootstrap-color.svg" alt="BootStrap">
+                            <img src="../assets/images/bootstrap-color.svg" alt="BootStrap">
                         </div>
                         <div class="face back">
                             <span class="tech-name">BootStrap</span>
@@ -248,7 +248,7 @@
                 
                 <input type="hidden" name="accessKey" value="65c81d8d-27f7-4679-a7a4-aeb13bf5ec80">
                 <input type="hidden" name="replyTo" value="@">
-                <input type="hidden" name="redirectTo" value="https://patricia-diasr.github.io/Portfolio/">
+                <input type="hidden" name="redirectTo" value="https://patricia-diasr.github.io/Portfolio/pt">
                 <input type="text" name="honeypot" style="display: none;">
 
                 
@@ -270,7 +270,7 @@
                         <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854zm4.943 12.248V6.169H2.542v7.225zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248S2.4 3.226 2.4 3.934c0 .694.521 1.248 1.327 1.248zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016l.016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225z"/>
                     </svg>
                 </a>
-                <a href="./assets/documents/Curriculo.pdf" target="_blank" class="icone">
+                <a href="../assets/documents/Curriculo.pdf" target="_blank" class="icone">
                     <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-file-earmark-text-fill" viewBox="0 0 16 16">
                         <path d="M9.293 0H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V4.707A1 1 0 0 0 13.707 4L10 .293A1 1 0 0 0 9.293 0M9.5 3.5v-2l3 3h-2a1 1 0 0 1-1-1M4.5 9a.5.5 0 0 1 0-1h7a.5.5 0 0 1 0 1zM4 10.5a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7a.5.5 0 0 1-.5-.5m.5 2.5a.5.5 0 0 1 0-1h4a.5.5 0 0 1 0 1z"/>
                     </svg>
@@ -280,7 +280,7 @@
         </section>
     </main>
 </body>
-<script src="assets/js/cursor.js"></script>
-<script src="assets/js/menu.js"></script>
-<script src="assets/js/slider.js"></script>
+<script src="../assets/js/cursor.js"></script>
+<script src="../assets/js/menu.js"></script>
+<script src="../assets/js/slider.js"></script>
 </html>
