--- a/pt/projeto1.html
+++ b/pt/projeto1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prudente Casa Pet</title>
-    <link rel="stylesheet" href="./assets/css/projeto1.css">
+    <link rel="stylesheet" href="../assets/css/projeto1.css">
 </head>
 <body>
     <canvas id="sparkles"></canvas>
@@ -34,7 +34,7 @@
         <section id="about">
             <div class="col-1">
                 <div class="square-container">
-                    <img id="profile" src="./assets/images/logo-prudente-casa-pet.png" alt="Logo Prudente Casa Pet">
+                    <img id="profile" src="../assets/images/logo-prudente-casa-pet.png" alt="Logo Prudente Casa Pet">
                 </div>
             </div>
             <div class="col-2">
@@ -63,7 +63,7 @@
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
                                 <defs>
                                     <pattern id="galaxyPattern" patternUnits="userSpaceOnUse" width="16" height="16">
-                                        <image href="./assets/images/galaxy.jpg" x="0" y="0" width="16" height="16" preserveAspectRatio="xMidYMid slice" />
+                                        <image href="../assets/images/galaxy.jpg" x="0" y="0" width="16" height="16" preserveAspectRatio="xMidYMid slice" />
                                     </pattern>
                                 </defs>
                                 <path fill="url(#galaxyPattern)" d="M2 6a6 6 0 1 1 10.174 4.31c-.203.196-.359.4-.453.619l-.762 1.769A.5.5 0 0 1 10.5 13a.5.5 0 0 1 0 1 .5.5 0 0 1 0 1l-.224.447a1 1 0 0 1-.894.553H6.618a1 1 0 0 1-.894-.553L5.5 15a.5.5 0 0 1 0-1 .5.5 0 0 1 0-1 .5.5 0 0 1-.46-.302l-.761-1.77a2 2 0 0 0-.453-.618A5.98 5.98 0 0 1 2 6m6-5a5 5 0 0 0-3.479 8.592c.263.254.514.564.676.941L5.83 12h4.342l.632-1.467c.162-.377.413-.687.676-.941A5 5 0 0 0 8 1"/>
@@ -83,7 +83,7 @@
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
                                 <defs>
                                     <pattern id="galaxyPattern" patternUnits="userSpaceOnUse" width="16" height="16">
-                                        <image href="./assets/images/mini-galaxy.jpg" x="0" y="0" width="16" height="16" preserveAspectRatio="xMidYMid slice" />
+                                        <image href="../assets/images/mini-galaxy.jpg" x="0" y="0" width="16" height="16" preserveAspectRatio="xMidYMid slice" />
                                     </pattern>
                                 </defs>
                                 <path fill="url(#galaxyPattern)" d="M15.825.12a.5.5 0 0 1 .132.584c-1.53 3.43-4.743 8.17-7.095 10.64a6.1 6.1 0 0 1-2.373 1.534c-.018.227-.06.538-.16.868-.201.659-.667 1.479-1.708 1.74a8.1 8.1 0 0 1-3.078.132 4 4 0 0 1-.562-.135 1.4 1.4 0 0 1-.466-.247.7.7 0 0 1-.204-.288.62.62 0 0 1 .004-.443c.095-.245.316-.38.461-.452.394-.197.625-.453.867-.826.095-.144.184-.297.287-.472l.117-.198c.151-.255.326-.54.546-.848.528-.739 1.201-.925 1.746-.896q.19.012.348.048c.062-.172.142-.38.238-.608.261-.619.658-1.419 1.187-2.069 2.176-2.67 6.18-6.206 9.117-8.104a.5.5 0 0 1 .596.04M4.705 11.912a1.2 1.2 0 0 0-.419-.1c-.246-.013-.573.05-.879.479-.197.275-.355.532-.5.777l-.105.177c-.106.181-.213.362-.32.528a3.4 3.4 0 0 1-.76.861c.69.112 1.736.111 2.657-.12.559-.139.843-.569.993-1.06a3 3 0 0 0 .126-.75zm1.44.026c.12-.04.277-.1.458-.183a5.1 5.1 0 0 0 1.535-1.1c1.9-1.996 4.412-5.57 6.052-8.631-2.59 1.927-5.566 4.66-7.302 6.792-.442.543-.795 1.243-1.042 1.826-.121.288-.214.54-.275.72v.001l.575.575zm-4.973 3.04.007-.005zm3.582-3.043.002.001h-.002z"/>
@@ -91,7 +91,7 @@
                         </div>
                         <div class="face back">
                             <div class="text">
-                                <h4>Desing</h4>
+                                <h4>Desing e Layout</h4>
                                 <p>Desenvolvimento de paleta de cores e prototipação de telas com o Figma.</p>
                             </div>
                         </div>
@@ -103,7 +103,7 @@
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
                                 <defs>
                                     <pattern id="galaxyPattern" patternUnits="userSpaceOnUse" width="16" height="16">
-                                        <image href="./assets/images/mini-galaxy.jpg" x="0" y="0" width="16" height="16" preserveAspectRatio="xMidYMid slice" />
+                                        <image href="../assets/images/mini-galaxy.jpg" x="0" y="0" width="16" height="16" preserveAspectRatio="xMidYMid slice" />
                                     </pattern>
                                 </defs>
                                 <path fill="url(#galaxyPattern)" d="M8 4.754a3.246 3.246 0 1 0 0 6.492 3.246 3.246 0 0 0 0-6.492M5.754 8a2.246 2.246 0 1 1 4.492 0 2.246 2.246 0 0 1-4.492 0"/>
@@ -124,7 +124,7 @@
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
                                 <defs>
                                     <pattern id="galaxyPattern" patternUnits="userSpaceOnUse" width="16" height="16">
-                                        <image href="./assets/images/mini-galaxy.jpg" x="0" y="0" width="16" height="16" preserveAspectRatio="xMidYMid slice" />
+                                        <image href="../assets/images/mini-galaxy.jpg" x="0" y="0" width="16" height="16" preserveAspectRatio="xMidYMid slice" />
                                     </pattern>
                                 </defs>
                                 <path fill="url(#galaxyPattern)" d="M12.5 16a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7m1.679-4.493-1.335 2.226a.75.75 0 0 1-1.174.144l-.774-.773a.5.5 0 0 1 .708-.708l.547.548 1.17-1.951a.5.5 0 1 1 .858.514"/>
@@ -145,7 +145,7 @@
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
                                 <defs>
                                     <pattern id="galaxyPattern" patternUnits="userSpaceOnUse" width="16" height="16">
-                                        <image href="./assets/images/mini-galaxy.jpg" x="0" y="0" width="16" height="16" preserveAspectRatio="xMidYMid slice" />
+                                        <image href="../assets/images/mini-galaxy.jpg" x="0" y="0" width="16" height="16" preserveAspectRatio="xMidYMid slice" />
                                     </pattern>
                                 </defs>
                                 <path fill="url(#galaxyPattern)" d="M1.5 0A1.5 1.5 0 0 0 0 1.5v7A1.5 1.5 0 0 0 1.5 10H6v1H1a1 1 0 0 0-1 1v3a1 1 0 0 0 1 1h14a1 1 0 0 0 1-1v-3a1 1 0 0 0-1-1h-5v-1h4.5A1.5 1.5 0 0 0 16 8.5v-7A1.5 1.5 0 0 0 14.5 0zm0 1h13a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-.5.5h-13a.5.5 0 0 1-.5-.5v-7a.5.5 0 0 1 .5-.5M12 12.5a.5.5 0 1 1 1 0 .5.5 0 0 1-1 0m2 0a.5.5 0 1 1 1 0 .5.5 0 0 1-1 0M1.5 12h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1 0-1M1 14.25a.25.25 0 0 1 .25-.25h5.5a.25.25 0 1 1 0 .5h-5.5a.25.25 0 0 1-.25-.25"/>
@@ -153,7 +153,7 @@
                         </div>
                         <div class="face back">
                             <div class="text">
-                                <h4>Site</h4>
+                                <h4>Website</h4>
                                 <p>O site foi desenvolido com Angular e Ionic, nele é possível realizar CRUD em informações importantes para o estabelecimento, como pets, tutores, pacotes, procedimentos médicos e pagamentos.</p>
                             </div>
                         </div>
@@ -165,7 +165,7 @@
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
                                 <defs>
                                     <pattern id="galaxyPattern" patternUnits="userSpaceOnUse" width="16" height="16">
-                                        <image href="./assets/images/mini-galaxy.jpg" x="0" y="0" width="16" height="16" preserveAspectRatio="xMidYMid slice" />
+                                        <image href="../assets/images/mini-galaxy.jpg" x="0" y="0" width="16" height="16" preserveAspectRatio="xMidYMid slice" />
                                     </pattern>
                                 </defs>
                                 <path fill="url(#galaxyPattern)" d="M11 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1zM5 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2z"/>
@@ -185,12 +185,12 @@
         <section id="gallery">
             <div class="stars"></div>
             <h3>Veja funcionando</h3>
-            <video id="main-video" onplay="play('./assets/videos/agenda.mp4')" src="./assets/videos/agenda.mp4" controls></video>
+            <video id="main-video" onplay="play('../assets/videos/agenda.mp4')" src="../assets/videos/agenda.mp4" controls></video>
             <ul id="video-playlist"></ul>
         </section>
     </main>
 </body>
-<script src="./assets/js/cursor.js"></script>
-<script src="./assets/js/menu.js"></script>
-<script src="./assets/js/videoGallery.js"></script>
+<script src="../assets/js/cursor.js"></script>
+<script src="../assets/js/menu.js"></script>
+<script src="../assets/js/galeriaVideos.js"></script>
 </html>
