Projeto calculadora adicionado

--- a/en/index.html
+++ b/en/index.html
@@ -231,6 +231,19 @@
                             </div>
                         </div>
                     </div>
+                    <div class="slide fade">
+                        <div class="project">
+                            <div class="project-image"></div>
+                            <div class="project-info">
+                                <div>
+                                    <h4>Calculator</h4>
+                                    <p>Calculator that performs addition, subtraction, multiplication, division, and percentage functions. It has both a dark and light theme, as well as a history stored in LocalStorage.</p>
+                                    <p><strong>Technologies:</strong> HTML, CSS, JavaScript, TypeScript</p>
+                                </div>
+                                <a href="https://patricia-diasr.github.io/Calculadora/" target="_blank">See more</a>
+                            </div>
+                        </div>
+                    </div>
                     
                     <a class="prev" onclick="plusSlides(-1)">❮</a>
                     <a class="next" onclick="plusSlides(1)">❯</a>
@@ -239,6 +252,7 @@
                     <br>
                     <div class="dots" style="text-align:center">
                         <span class="dot" onclick="currentSlide(1)"></span> 
+                        <span class="dot" onclick="currentSlide(2)"></span> 
                     </div>
             </div>
         </section> 
