--- a/pt/index.html
+++ b/pt/index.html
@@ -231,6 +231,20 @@
                             </div>
                         </div>
                     </div>
+                    <div class="slide fade">
+                        <div class="project">
+                            <div class="project-image"></div>
+                            <div class="project-info">
+                                <div>
+                                    <h4>Calculadora</h4>
+                                    <p>Calculadora que realiza funções de adição, subtração, multiplicação, divisão e porcentagem. Possuí tema escuro e claro, além de um histórico armazenado em LocalStorage.</p>
+                                    <p><strong>Tecnologias:</strong> HTML, CSS, JavaScript, TypeScript</p>
+                                </div>
+                                <a href="https://patricia-diasr.github.io/Calculadora/" target="_blank">Ver site</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
                     
                     <a class="prev" onclick="plusSlides(-1)">❮</a>
                     <a class="next" onclick="plusSlides(1)">❯</a>
@@ -239,6 +253,7 @@
                     <br>
                     <div class="dots" style="text-align:center">
                         <span class="dot" onclick="currentSlide(1)"></span> 
+                        <span class="dot" onclick="currentSlide(2)"></span> 
                     </div>
             </div>
         </section> 
