--- a/en/index.html
+++ b/en/index.html
@@ -215,45 +215,40 @@
             </div>
         </section>
         <section id="projects">
-            <div>
-                <h3>Projects</h3>
-                <div class="slideshow-container">
-                    <div class="slide fade">
-                        <div class="project">
-                            <div class="project-image"></div>
-                            <div class="project-info">
-                                <div>
-                                    <h4>Prudente Casa Pet</h4>
-                                    <p>Administrative system created for a Day Care and Pet Lodging company that manages schedules and relevant information for the company, and an mobile application that optimizes communication with clients.</p>
-                                    <p><strong>Technologies:</strong> Angular, Ionic, PHP API, MySQL Database, Firebase Storage, JWT, Figma, UML</p>
-                                </div>
-                                <a href="./projeto1.html">See more</a>
-                            </div>
-                        </div>
+            <h3>Projects</h3>
+            <div class="slide">
+                <div class="project-image"></div>
+                <div class="project-info">
+                    <div>
+                        <h4>Prudente Casa Pet</h4>
+                        <p>Administrative system created for a Day Care and Pet Lodging company that manages schedules and relevant information for the company, and an mobile application that optimizes communication with clients.</p>
+                        <p><strong>Technologies:</strong> Angular, Ionic, PHP API, MySQL Database, Firebase Storage, JWT, Figma, UML</p>
                     </div>
-                    <div class="slide fade">
-                        <div class="project">
-                            <div class="project-image"></div>
-                            <div class="project-info">
-                                <div>
-                                    <h4>Calculator</h4>
-                                    <p>Calculator that performs addition, subtraction, multiplication, division, and percentage functions. It has both a dark and light theme, as well as a history stored in LocalStorage.</p>
-                                    <p><strong>Technologies:</strong> HTML, CSS, JavaScript, TypeScript</p>
-                                </div>
-                                <a href="https://patricia-diasr.github.io/Calculadora/" target="_blank">See more</a>
-                            </div>
-                        </div>
-                    </div>
-                    
-                    <a class="prev" onclick="plusSlides(-1)">❮</a>
-                    <a class="next" onclick="plusSlides(1)">❯</a>
-                    
+                    <a href="./projeto1.html">See more</a>
                 </div>
-                    <br>
-                    <div class="dots" style="text-align:center">
-                        <span class="dot" onclick="currentSlide(1)"></span> 
-                        <span class="dot" onclick="currentSlide(2)"></span> 
+                <div class="prev" onclick="plusSlides(-1)"><span class="material-symbols-outlined">navigate_before</span></div>
+                <div class="next" onclick="plusSlides(1)"><span class="material-symbols-outlined">navigate_next</span></div>
+                <div class="dots">
+                    <span class="dot active" onclick="currentSlide(1)"></span>
+                    <span class="dot" onclick="currentSlide(2)"></span>
+                </div>
+            </div>
+            <div class="slide">
+                <div class="project-image"></div>
+                <div class="project-info">
+                    <div>
+                        <h4>Calculator</h4>
+                        <p>Calculator that performs addition, subtraction, multiplication, division, and percentage functions. It has both a dark and light theme, as well as a history stored in LocalStorage.</p>
+                        <p><strong>Technologies:</strong> HTML, CSS, JavaScript, TypeScript</p>
                     </div>
+                    <a href="https://patricia-diasr.github.io/Calculadora/" target="_blank">See site</a>
+                </div>
+                <div class="prev" onclick="plusSlides(-1)"><span class="material-symbols-outlined">navigate_before</span></div>
+                <div class="next" onclick="plusSlides(1)"><span class="material-symbols-outlined">navigate_next</span></div>
+                <div class="dots">
+                    <span class="dot" onclick="currentSlide(1)"></span>
+                    <span class="dot active" onclick="currentSlide(2)"></span>
+                </div>
             </div>
         </section> 
         <section id="contacts">
