Correção de texto

--- a/pt/index.html
+++ b/pt/index.html
@@ -242,7 +242,7 @@
                         <p>Calculadora que realiza funções de adição, subtração, multiplicação, divisão e porcentagem. Possuí tema escuro e claro, além de um histórico armazenado em LocalStorage.</p>
                         <p><strong>Tecnologias:</strong> HTML, CSS, JavaScript, TypeScript</p>
                     </div>
-                    <a href="https://patricia-diasr.github.io/Calculadora/" target="_blank">See site</a>
+                    <a href="https://patricia-diasr.github.io/Calculadora/" target="_blank">Ver site</a>
                 </div>
                 <div class="prev" onclick="plusSlides(-1)"><span class="material-symbols-outlined">navigate_before</span></div>
                 <div class="next" onclick="plusSlides(1)"><span class="material-symbols-outlined">navigate_next</span></div>
