Projeto Latte Lounge adicionado

--- a/en/index.html
+++ b/en/index.html
@@ -232,6 +232,7 @@
                 <div class="dots">
                     <span class="dot active" onclick="currentSlide(1)"></span>
                     <span class="dot" onclick="currentSlide(2)"></span>
+                    <span class="dot" onclick="currentSlide(3)"></span>
                 </div>
             </div>
             <div class="slide">
@@ -249,6 +250,25 @@
                 <div class="dots">
                     <span class="dot" onclick="currentSlide(1)"></span>
                     <span class="dot active" onclick="currentSlide(2)"></span>
+                    <span class="dot" onclick="currentSlide(3)"></span>
+                </div>
+            </div>
+            <div class="slide">
+                <div class="project-image"></div>
+                <div class="project-info">
+                    <div>
+                        <h4>Latte Lounge</h4>
+                        <p>Institutional website developed for a fictional café, with the pages About, Menu, Events, News, and Contact.</p>
+                        <p><strong>Technologies:</strong> Wordpress</p>
+                    </div>
+                    <a href="http://latte-lounge.000.pe/" target="_blank">See site</a>
+                </div>
+                <div class="prev" onclick="plusSlides(-1)"><span class="material-symbols-outlined">navigate_before</span></div>
+                <div class="next" onclick="plusSlides(1)"><span class="material-symbols-outlined">navigate_next</span></div>
+                <div class="dots">
+                    <span class="dot" onclick="currentSlide(1)"></span>
+                    <span class="dot" onclick="currentSlide(2)"></span>
+                    <span class="dot active" onclick="currentSlide(3)"></span>
                 </div>
             </div>
         </section> 
