--- a/pt/index.html
+++ b/pt/index.html
@@ -232,6 +232,7 @@
                 <div class="dots">
                     <span class="dot active" onclick="currentSlide(1)"></span>
                     <span class="dot" onclick="currentSlide(2)"></span>
+                    <span class="dot" onclick="currentSlide(3)"></span>
                 </div>
             </div>
             <div class="slide">
@@ -249,6 +250,25 @@
                 <div class="dots">
                     <span class="dot" onclick="currentSlide(1)"></span>
                     <span class="dot active" onclick="currentSlide(2)"></span>
+                    <span class="dot" onclick="currentSlide(3)"></span>
+                </div>
+            </div>
+            <div class="slide">
+                <div class="project-image"></div>
+                <div class="project-info">
+                    <div>
+                        <h4>Latte Lounge</h4>
+                        <p>Site institucional desenvolvido para uma cafeteria fictícia, com as páginas de Sobre, Cardápio, Eventos, Notícias e Contato.</p>
+                        <p><strong>Tecnologias:</strong> Wordpress</p>
+                    </div>
+                    <a href="http://latte-lounge.000.pe/" target="_blank">Ver site</a>
+                </div>
+                <div class="prev" onclick="plusSlides(-1)"><span class="material-symbols-outlined">navigate_before</span></div>
+                <div class="next" onclick="plusSlides(1)"><span class="material-symbols-outlined">navigate_next</span></div>
+                <div class="dots">
+                    <span class="dot" onclick="currentSlide(1)"></span>
+                    <span class="dot" onclick="currentSlide(2)"></span>
+                    <span class="dot active" onclick="currentSlide(3)"></span>
                 </div>
             </div>
         </section> 
