Active section showing on menu

--- a/en/projeto1.html
+++ b/en/projeto1.html
@@ -13,7 +13,7 @@
             <ul id="menu">
                 <li><a href="./index.html#about">About Me</a></li>
                 <li><a href="./index.html#technologies">Technologies</a></li>
-                <li><a href="./index.html#projects">Projects</a></li>
+                <li><a class="active-section" href="./index.html#projects">Projects</a></li>
                 <li><a href="./index.html#contacts">Contact</a></li>
             </ul>
             <svg onClick="toggleMenu()" id="open-menu" class="visible" xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
@@ -184,6 +184,6 @@
     </main>
 </body>
 <script src="../assets/js/cursor.js"></script>
-<script src="../assets/js/menu.js"></script>
+<script src="../assets/js/responsiveMenu.js"></script>
 <script src="../assets/js/videoGallery.js"></script>
 </html>
