--- a/pt/index.html
+++ b/pt/index.html
@@ -126,6 +126,16 @@
                 <div class="item">
                     <div class="card">
                         <div class="face front">
+                            <img src="../assets/images/react-color.svg" alt="React">
+                        </div>
+                        <div class="face back">
+                            <span class="tech-name">React</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="card">
+                        <div class="face front">
                             <img src="../assets/images/ionic-color.svg" alt="Ionic">
                         </div>
                         <div class="face back">
@@ -180,16 +190,6 @@
                         </div>
                         <div class="face back">
                             <span class="tech-name">Git</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="item">
-                    <div class="card">
-                        <div class="face front">
-                            <img src="../assets/images/figma-color.svg" alt="Figma">
-                        </div>
-                        <div class="face back">
-                            <span class="tech-name">Figma</span>
                         </div>
                     </div>
                 </div>
@@ -333,6 +333,7 @@
     </main>
 </body>
 <script src="../assets/js/cursor.js"></script>
-<script src="../assets/js/menu.js"></script>
+<script src="../assets/js/responsiveMenu.js"></script>
+<script src="../assets/js/activeMenu.js"></script>
 <script src="../assets/js/slider.js"></script>
 </html>
