Meta description and alt text on links

--- a/en/projeto1.html
+++ b/en/projeto1.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Project developed as a Final Course Work for a pet boarding and day care company, using the technologies HTML, CSS, JavaScript, TypeScript, Angular, PHP, and MySQL.">
     <title>Prudente Casa Pet</title>
     <link rel="stylesheet" href="../assets/css/projeto1.css">
 </head>
@@ -39,7 +40,7 @@
             </div>
             <div class="col-2">
                 <div class="info">
-                    <h3>About the project...</h3>
+                    <h2>About the project...</h2>
                     <p>This project was developed as a group project for the conclusion of the Systems Development Technician course. The client chosen for this project was Prudente Casa Pet, a company providing pet boarding and day care services.</p>
                     <p>The system consists of an administrative website to be used by the establishment's owner, as well as an mobile application aimed at facilitating communication between the company and its clients during a pet's stay.</p>
                 </div>
@@ -48,7 +49,7 @@
         <section id="more-information">
             <div class="stars"></div>
 
-            <h3>Saiba mais</h3>
+            <h2>Saiba mais</h2>
             <div class="items">
                 <div class="item">
                     <div class="card">
@@ -177,7 +178,7 @@
         </section>
         <section id="gallery">
             <div class="stars"></div>
-            <h3>See it in action</h3>
+            <h2>See it in action</h2>
             <video id="main-video" onplay="play('../assets/videos/agenda.mp4')" src="../assets/videos/agenda.mp4" controls></video>
             <ul id="video-playlist"></ul>
         </section>
