--- a/pt/projeto1.html
+++ b/pt/projeto1.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Projeto desenvolvido como Trabalho de Conclusão de Curso para uma empresa de hospedagem e day care pet, utilizando as técnologias HTML, CSS, JavaScript, TypeScript, Angular, PHP e MySQL">
     <title>Prudente Casa Pet</title>
     <link rel="stylesheet" href="../assets/css/projeto1.css">
 </head>
@@ -39,7 +40,7 @@
             </div>
             <div class="col-2">
                 <div class="info">
-                    <h3>Sobre o projeto...</h3>
+                    <h2>Sobre o projeto...</h2>
                     <p>Esse projeto foi desenvolvido em grupo como Trabalho de Conclusão de Curso do Técnico de Desenvolvimento de Sistemas. Como cliente, foi escolhido a Prudente Casa Pet, uma empresa de Hospedagem e Day Care de animais de estimação.</p>
                     <p>O sistema é composto por um site administrativo a ser usado pela dona do estabelecimento, além de um aplicativo com o objetivo de facilitar a comunicação entre a empresa e seus clientes durante a estadia de um pet.</p>
                 </div>
@@ -48,7 +49,7 @@
         <section id="more-information">
             <div class="stars"></div>
 
-            <h3>Saiba mais</h3>
+            <h2>Saiba mais</h2>
             <div class="items">
                 <div class="item">
                     <div class="card">
@@ -177,7 +178,7 @@
         </section>
         <section id="gallery">
             <div class="stars"></div>
-            <h3>Veja funcionando</h3>
+            <h2>Veja funcionando</h2>
             <video id="main-video" onplay="play('../assets/videos/agenda.mp4')" src="../assets/videos/agenda.mp4" controls></video>
             <ul id="video-playlist"></ul>
         </section>
