--- a/en/index.html
+++ b/en/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Software Development Technician and Engineering Software student seeking professional opportunity to apply skills in HTML, CSS, JavaScript, TypeScript, Angular, React, PHP, Node, and MySQL. Check out my Web Development portfolio!">
     <title>Patrícia Dias</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link rel="stylesheet" href="../assets/css/style.css">
@@ -44,20 +45,20 @@
                     <div class="info">
                         <h3>Who am I?</h3>
                         <p>Hello, my name is Patrícia! I have a great passion for exploring the vast world of software development, and I am constantly seeking new challenges and learning opportunities.</p>
-                        <p>I graduated as a Systems Development Technician from Etec Sales Gomes. Currently, I am starting my first semester of Software Engineering at Infnet.</p>
+                        <p>I graduated as a Systems Development Technician from Etec Sales Gomes. Currently, I am in my first semester of Software Engineering at Infnet.</p>
                         <p>At the moment, I am seeking my first professional opportunity to apply my knowledge in Web Development.</p>
                         <div class="icones">
-                            <a href="https://github.com/patricia-diasr" target="_blank" class="icone">
+                            <a href="https://github.com/patricia-diasr" target="_blank" class="icone" title="Github Link">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="42" height="42" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
                                     <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27s1.36.09 2 .27c1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.01 8.01 0 0 0 16 8c0-4.42-3.58-8-8-8"/>
                                 </svg>
                             </a>
-                            <a href="https://www.linkedin.com/in/patricia-dias-rodrigues-0130332b6/" target="_blank" class="icone">
+                            <a href="https://www.linkedin.com/in/patricia-dias-rodrigues-0130332b6/" target="_blank" class="icone" title="Linkedin Link">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-linkedin" viewBox="0 0 16 16">
                                     <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854zm4.943 12.248V6.169H2.542v7.225zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248S2.4 3.226 2.4 3.934c0 .694.521 1.248 1.327 1.248zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016l.016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225z"/>
                                 </svg>
                             </a>
-                            <a href="../assets/documents/Resume.pdf" target="_blank"  class="icone">
+                            <a href="../assets/documents/Resume.pdf" target="_blank"  class="icone" title="Resumé Link">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-file-earmark-text-fill" viewBox="0 0 16 16">
                                     <path d="M9.293 0H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V4.707A1 1 0 0 0 13.707 4L10 .293A1 1 0 0 0 9.293 0M9.5 3.5v-2l3 3h-2a1 1 0 0 1-1-1M4.5 9a.5.5 0 0 1 0-1h7a.5.5 0 0 1 0 1zM4 10.5a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7a.5.5 0 0 1-.5-.5m.5 2.5a.5.5 0 0 1 0-1h4a.5.5 0 0 1 0 1z"/>
                                 </svg>
@@ -225,7 +226,7 @@
                         <p>Administrative system created for a Day Care and Pet Lodging company that manages schedules and relevant information for the company, and an mobile application that optimizes communication with clients.</p>
                         <p><strong>Technologies:</strong> Angular, Ionic, PHP API, MySQL Database, Firebase Storage, JWT, Figma, UML</p>
                     </div>
-                    <a href="./projeto1.html">See more</a>
+                    <a href="./projeto1.html" title="Veja mais do projeto Prudente Casa Pet">See more</a>
                 </div>
                 <div class="prev" onclick="plusSlides(-1)"><span class="material-symbols-outlined">navigate_before</span></div>
                 <div class="next" onclick="plusSlides(1)"><span class="material-symbols-outlined">navigate_next</span></div>
@@ -244,7 +245,7 @@
                         <p>ToDo List application, where it's possible to register, edit, and delete tasks and filter them by name, date, importance, and completion status.</p>
                         <p><strong>Technologies:</strong> React.js, Firebase Realtime Database</p>
                     </div>
-                    <a href="https://patricia-diasr.github.io/todo/" target="_blank">See site</a>
+                    <a href="https://patricia-diasr.github.io/todo/" target="_blank" title="Veja o site ToDo List">See site</a>
                 </div>
                 <div class="prev" onclick="plusSlides(-1)"><span class="material-symbols-outlined">navigate_before</span></div>
                 <div class="next" onclick="plusSlides(1)"><span class="material-symbols-outlined">navigate_next</span></div>
@@ -263,7 +264,7 @@
                         <p>Calculator that performs addition, subtraction, multiplication, division, and percentage functions. It has both a dark and light theme, as well as a history stored in LocalStorage.</p>
                         <p><strong>Technologies:</strong> HTML, CSS, JavaScript, TypeScript</p>
                     </div>
-                    <a href="https://patricia-diasr.github.io/Calculadora/" target="_blank">See site</a>
+                    <a href="https://patricia-diasr.github.io/Calculadora/" target="_blank" title="Veja site Calculadora">See site</a>
                 </div>
                 <div class="prev" onclick="plusSlides(-1)"><span class="material-symbols-outlined">navigate_before</span></div>
                 <div class="next" onclick="plusSlides(1)"><span class="material-symbols-outlined">navigate_next</span></div>
@@ -282,7 +283,7 @@
                         <p>Institutional website developed for a fictional café, with the pages About, Menu, Events, News, and Contact.</p>
                         <p><strong>Technologies:</strong> Wordpress</p>
                     </div>
-                    <a href="http://latte-lounge.000.pe/" target="_blank">See site</a>
+                    <a href="http://latte-lounge.000.pe/" target="_blank" title="Veja site Latte Lounge">See site</a>
                 </div>
                 <div class="prev" onclick="plusSlides(-1)"><span class="material-symbols-outlined">navigate_before</span></div>
                 <div class="next" onclick="plusSlides(1)"><span class="material-symbols-outlined">navigate_next</span></div>
@@ -309,17 +310,17 @@
             </form>
             
             <div class="icones">
-                <a href="https://github.com/patricia-diasr" target="_blank" class="icone">
+                <a href="https://github.com/patricia-diasr" target="_blank" class="icone" title="Github Link">
                     <svg xmlns="http://www.w3.org/2000/svg" width="42" height="42" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
                         <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27s1.36.09 2 .27c1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.01 8.01 0 0 0 16 8c0-4.42-3.58-8-8-8"/>
                     </svg>
                 </a>
-                <a href="https://www.linkedin.com/in/patricia-dias-rodrigues-0130332b6/" target="_blank" class="icone">
+                <a href="https://www.linkedin.com/in/patricia-dias-rodrigues-0130332b6/" target="_blank" class="icone" title="Linkedin Link">
                     <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-linkedin" viewBox="0 0 16 16">
                         <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854zm4.943 12.248V6.169H2.542v7.225zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248S2.4 3.226 2.4 3.934c0 .694.521 1.248 1.327 1.248zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016l.016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225z"/>
                     </svg>
                 </a>
-                <a href="../assets/documents/Resume.pdf" target="_blank" class="icone">
+                <a href="../assets/documents/Resume.pdf" target="_blank" class="icone" title="Resume Link">
                     <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-file-earmark-text-fill" viewBox="0 0 16 16">
                         <path d="M9.293 0H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V4.707A1 1 0 0 0 13.707 4L10 .293A1 1 0 0 0 9.293 0M9.5 3.5v-2l3 3h-2a1 1 0 0 1-1-1M4.5 9a.5.5 0 0 1 0-1h7a.5.5 0 0 1 0 1zM4 10.5a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7a.5.5 0 0 1-.5-.5m.5 2.5a.5.5 0 0 1 0-1h4a.5.5 0 0 1 0 1z"/>
                     </svg>
