Correção de texto

--- a/en/index.html
+++ b/en/index.html
@@ -45,8 +45,7 @@
                     <div class="info">
                         <h3>Who am I?</h3>
                         <p>Hello, my name is Patrícia! I have a great passion for exploring the vast world of software development, and I am constantly seeking new challenges and learning opportunities.</p>
-                        <p>I graduated as a Systems Development Technician from Etec Sales Gomes. Currently, I am in my first semester of Software Engineering at Infnet.</p>
-                        <p>At the moment, I am seeking my first professional opportunity to apply my knowledge in Web Development.</p>
+                        <p>I graduated as a Systems Development Technician from Etec Sales Gomes. Currently, I am in my second semester of Software Engineering at Infnet.</p>
                         <div class="icones">
                             <a href="https://github.com/patricia-diasr" target="_blank" class="icone" title="Github Link">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="42" height="42" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
