--- a/pt/index.html
+++ b/pt/index.html
@@ -45,8 +45,7 @@
                     <div class="info">
                         <h3>Quem sou eu?</h3>
                         <p>Olá, meu nome é Patrícia! Tenho uma grande paixão por explorar o vasto mundo do desenvolvimento de software, e estou constantemente em busca de novos desafios e oportunidades de aprendizado.</p>
-                        <p>Sou formada em Técnico em Desenvolvimento de Sistemas pela Etec Sales Gomes. Nesse momento, estou no meu primeiro período de Engenharia de Software na Infnet.</p>
-                        <p>No momento, estou em busca da minha primeira oportunidade profissional para colocar em prática meus conhecimentos em Desenvolvimento Web.</p>
+                        <p>Sou formada em Técnico em Desenvolvimento de Sistemas pela Etec Sales Gomes. Nesse momento, estou no meu segundo período de Engenharia de Software na Infnet.</p>
                         <div class="icones">
                             <a href="https://github.com/patricia-diasr" target="_blank" class="icone" title="Link do Github">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="42" height="42" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
